--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -1,1 +1,21 @@
 // This is an empty scss file for your custom styles - Please add your super duper awesome mega design styles here
+
+
+//footer
+
+	.background-aqua{
+		background: url('http://cupfocsani.workmyweb.ro/wp-content/uploads/2021/01/banner-aqua.jpg') no-repeat;
+		background-size: cover;
+	}
+	#cookie_div { background: #222222; color: #ffffff; position: fixed; bottom: 0; left: 25%; width: 50%; padding: 8px 20px; display: none; z-index: 999; -webkit-box-shadow: -1px -5px 21px 1px rgba(0, 0, 0, 0.12); -moz-box-shadow: -1px -5px 21px 1px rgba(0, 0, 0, 0.12); box-shadow: -1px -5px 21px 1px rgba(0, 0, 0, 0.12); border-radius: 6px; }
+	#cookie_div .button { float: right; padding: 5px 20px; font-size: 12px; margin-top: 3px; }
+
+	.line-ue{
+		border-top: solid 1px #eeeded;
+	}
+	.link-ue a{
+		color: #5091c8 !important;
+	}
+
+
+//footer
